--- a/scss/_demo.scss
+++ b/scss/_demo.scss
@@ -104,3 +104,21 @@ button{
   left:0;
   float:left;
 }
+
+.tooltip {
+	display:none;
+	position:absolute;
+	border:1px solid #333;
+	background-color:#161616;
+	border-radius:5px;
+	padding:10px;
+	color:#fff;
+	font-size:0.8em;
+  font-family:monospace;
+  li{
+    margin-left:$margin-lg;
+  }
+  strong{
+    text-decoration: underline;
+  }
+}
